[b]Version 0.6.0rc2 (not released yet)[/b]:

(2008-02-04)
 * The option Play->Repeat should work better now. Also if using mplayer
   >= r23747 toggling the option won't require to restart mplayer (uses
   the loop slave command instead).

(2008-02-03)
 * Try to remember if the window was maximized after exiting from fullscreen.
 * Added workaround for the problem of subtitles which don't disappear when
   using the "Add black borders" filter.


[b]Version 0.6.0rc1[/b]:

(2008-01-30)
 * Added the Korean translation, by Heesu Yoon <imsu30@gmail.com>

(2008-01-29)
 * If a version is not recognized, assume it's an old version instead of new.
   This way at least the file will play.
 * Now smplayer should recognize the mplayer version from ubuntu packages
   (MPlayer 2:1.0~rc1-0ubuntu13.1 (C) 2000-2006 MPlayer Team).
 * Changed some defaults in preferences: framedrop will be enabled, and
   subtitles on screenshots disabled.

(2008-01-28)
 * Now the user can tell smplayer what version of mplayer is using, with the
   config option mplayer_forced_version. Anyway in the future there'll be
   a dialog to configure this.
 * Renamed mplayer_forced_version to mplayer_user_supplied_version. That
   version will be used only if smplayer can't parse the mplayer version from
   the mplayer output.
 * Now if the mplayer version can't be parsed a dialog will pop up asking the
   user for the mplayer version.

(2008-01-26)
 * Now it's possible to zoom out on the video image.
 * Cosmetic change: now the mouse icon in Preferences->Interface->Seeking
   has the same size as the icons above.
 * Moved to old-txt some outdated txt files.
 * Updated Release_notes.txt, with the changes since version 0.5.62.
 * Now under Windows, the main window will never start hidden even if the 
   system tray icon is shown. This should fix bug #1851817.
   On linux the behavior didn't change, as this is the way other applications
   work.

(2008-01-25)
 * Updated the FAQ.